packages/webui/src/client/styles/rundownView.scss
/* ... */
.segment-timeline-wrapper--shelf {
	div .segment-timeline {
		margin-bottom: 0 !important;
	}

	&:not(:first-child) {
		div .segment-timeline {
			margin-top: 0 !important;
		}
	}
}

.playlist-looping-header {
	color: $rundown-divider-color;
	background: $rundown-divider-background-color;
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
	align-items: stretch;
	align-content: space-between;
	overflow: hidden;
	user-select: none;
	-moz-user-select: none;
	-webkit-user-select: none;

	width: auto;
	margin: 0;
	padding: 0.3em 1em 0.3em 1.3em;

	&.multi-rundown {
		margin-bottom: -1.9em;
		padding-bottom: 0;
	}

	> .playlist-looping-header__label {
		margin: 0;
		padding: 0;
		font-size: 1.05em;
		font-weight: 500;

		> svg.icon {
			width: 1.4em;
		}
	}

	> .playlist-looping-header__countdown {
		font-size: 1.05em;
		margin-right: 1em;
		line-height: 1.4em;

		&:first-of-type {
			margin-left: 3em;
		}

		&.playlist-looping-header__countdown--time-of-day {
			font-weight: 600;
		}

		&.playlist-looping-header__countdown--countdown {
			font-weight: 300;
		}
	}
}

.segment-timeline-container + .playlist-looping-header {
	margin-bottom: 0 !important;
	padding-bottom: 0.3em !important;
}

.rundown-divider-timeline {
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
	align-items: stretch;
	align-content: space-between;
	overflow: hidden;
	user-select: none;
	-moz-user-select: none;
	-webkit-user-select: none;

	width: auto;
	margin: 1.5em;

	color: $rundown-divider-color;
	background: $rundown-divider-background-color;

	margin-left: 0;
	margin-right: 0;
	padding-left: 1em;
	padding-right: 1em;

	> .rundown-divider-timeline__title {
		margin: 0 1em 0 0; // center vertically
		padding: 0.3em;
		line-height: 1.2em;
		letter-spacing: 0px;
		font-weight: 600;
		hyphens: auto;
		-webkit-hyphens: auto;
		-ms-hyphens: auto;
		display: inline-block;
	}

	> .rundown-divider-timeline__playlist-name {
		margin: 0.7em 1em 0.4em 0; // center vertically
		line-height: 1.2em;
		font-size: 1.17em;
		letter-spacing: 0px;
		font-weight: 200;
		hyphens: auto;
		-webkit-hyphens: auto;
		-ms-hyphens: auto;
	}

	> .rundown-divider-timeline__notifications-group {
		vertical-align: bottom;
		white-space: nowrap;
		margin-bottom: 0.6em;
		margin-left: 0.5em;
	}

	.rundown-divider-timeline__notifications {
		margin-right: 0.8em;

		font-size: 0.8em;
		font-weight: 400;
		> svg {
			height: 1.5em;
			width: 1.5em;
			vertical-align: bottom;
			filter: drop-shadow(0 2px 3px rgba(0, 0, 0, 0.3));
			margin-right: 0.3em;
			position: relative;
			top: 0.05em;
		}
	}

	> .rundown-divider-timeline__expected-start,
	> .rundown-divider-timeline__expected-duration,
	> .rundown-divider-timeline__expected-end {
		vertical-align: bottom;
		margin: 1em 0.5em 0.5em;

		> time {
			font-weight: 600;
		}

		> .rundown-divider-timeline__expected-start__countdown {
			font-weight: 600;
			color: $general-late-color;
		}
	}

	> .rundown-divider-timeline__expected-duration {
		margin-left: auto;
	}
}

@keyframes inspector-fadeIn {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@keyframes inspector-wipeRight {
	0% {
		opacity: 0;
		clip-path: inset(0 100% 0 -100px);
	}
	100% {
		opacity: 1;
		clip-path: inset(0 -100px 0 -100px);
	}
}

.segment-timeline__title__notes__note {
	position: relative;
	padding-left: 20px;
	cursor: pointer;

	&:not(:last-child) {
		margin-bottom: 5px;
	}

	> svg {
		position: absolute;
		left: 0;
		top: -0.1em;
		height: 1.6em;
		width: 1.6em;
	}

	> .segment-timeline__title__notes__count {
		display: inline-block;
		min-width: 1.1em;
		line-height: 1.1em;
		font-weight: 600;
		text-align: center;
		border-radius: 1em;
		font-size: 0.9em;
		letter-spacing: -0.05em;
		position: relative;
		top: -0.3em;
		left: -0.3em;
		white-space: nowrap;
		padding: 0 0.2em 0 0.2em;
	}

	> svg.type-warning + .segment-timeline__title__notes__count {
		background: yellow;
		color: #000;
	}

	> svg.type-critical + .segment-timeline__title__notes__count {
		background: red;
		color: #fff;
	}
}

// TODO: this is just a debug label, should not be visible in final app
.segment-timeline__debug-info {
	position: absolute;
	white-space: nowrap;
	word-wrap: none;
	color: #fff;
	top: -1.5em;
	right: 0;

	&.red {
		color: red;
		top: auto;
		bottom: -1.5em;
		right: auto;
		left: 0;
	}
}
/* ... */

